Basic implementation of /api/v1/users route
