# routes/api/v1/users.js
@@ -1,11 +1,10 @@
 const express = require('express');
 const router = express.Router();
 
-const { getUsers, addUser, deleteAllUsers, getUserById, updateUserById, deleteUserById} = require("../../../controllers/users");
+const { getUsers, addUser, getUserById, updateUserById, deleteUserById} = require("../../../controllers/users");
 
 router.get('/', getUsers);
 router.post('/', addUser);
-router.delete('/', deleteAllUsers);
 router.get('/:userId', getUserById);
 router.put('/:userId', updateUserById);
 router.delete('/:userId', deleteUserById);
